--- a/scripts/newrelic_insights/config.yaml
+++ b/scripts/newrelic_insights/config.yaml
@@ -2,16 +2,16 @@ labels:
   datasource: newrelic
 targets:
 - name: "latency"
-  nrql: "SELECT percentile(duration, 90, 95, 99) from Transaction LIMIT 1000 SINCE 10 minutes ago UNTIL now"
+  nrql: "SELECT percentile(duration, 90, 95, 99) from Transaction LIMIT 1000 SINCE 1 minutes ago UNTIL now"
   key: "percentiles"
   facets:
     - name
 - name: "request_count"
-  nrql: "SELECT count(*) FROM Transaction LIMIT 1000 since 10 minutes ago UNTIL now"
+  nrql: "SELECT count(*) FROM Transaction LIMIT 1000 since 1 minutes ago UNTIL now"
   key: "count"
   facets:
     - name
     - httpResponseCode
 - name: "host_count"
-  nrql: "SELECT uniqueCount(host) FROM Transaction "
+  nrql: "SELECT uniqueCount(host) FROM Transaction since 1 minute ago"
   key: "uniqueCount"
